# graphrag-news-knowledge-graph

./: .env.example  .gitignore  PROGRESS.md  README.md  REQUIREMENTS.md  pyproject.toml
configs/: models.yaml
data/: questions_v1.json  sample_questions.json
data/corpus_v1/: corpus.json
data/sample_articles/: news_mini_corpus.json
docs/: demo_script.md  evaluation_report.md  literature_review.md  ollama_experiment.md  report_draft.md  research_notes.md  tool_comparison.md
resources/pdfs/: SOURCES.txt
scripts/: prepare_mind_subset.py
src/news_graphrag_demo/: __init__.py  app.py  cli.py  evaluation.py  extraction.py  generation.py  graph_store.py  lightrag_adapter.py  loaders.py  models.py  ollama_client.py  paths.py  pipeline.py  plotting.py  preprocessing.py  retrieval.py  storage.py  text_utils.py  vector_index.py
tests/: test_evaluation.py  test_loaders.py  test_pipeline.py
