[project]
name = "graphrag-news-knowledge-graph"
version = "0.1.0"
description = "Prototype demo for comparing keyword, vector, graph, hybrid, and LightRAG retrieval over news articles."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "httpx>=0.27",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.24",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.8",
  "scikit-learn>=1.5",
  "streamlit>=1.38",
  "typer>=0.12",
]

[project.optional-dependencies]
lightrag = [
  "lightrag-hku>=1.4.13",
]
dev = [
  "pytest>=8.3",
]

[project.scripts]
news-graphrag = "news_graphrag_demo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_graphrag_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
